--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= title %></title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <h1><%= title %></h1>
 </head>
 <body>
   <h1><%= title %></h1>
-  <!-- Add this line -->
-  <a href="/skills">Skills</a>
+  <a href="/skills">Add skills</a>
 </body>
 </html>
