--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>New Skill</h1>
-    <form action="/skills" method="POST" autocomplete="off">
-    <input type="text" name="skill">
-    <button type="submit">Save Skill</button>
-    </form>
+    <h1>Skills</h1>
+    <h2>Skill #<%= skill._id %></h2>
+    <h3><%= skill.skills %></h3>
+    <p>Learned: <%= skill.learned ? 'Yes' : 'No' %></p>
+    <a href="/skills">Go Back</a>
 </body>
 </html>
